--- a/css/women-dresses.css
+++ b/css/women-dresses.css
@@ -169,6 +169,9 @@ nav {
   align-items: center;
   justify-content: flex-start;
 }
+.fa-circle-xmark {
+  display: none;
+}
 
 #filter {
   /* border: 1px solid #000; */
@@ -667,6 +670,19 @@ ANIMATION SECTION END
 ANIMATION SECTION END
 ***********************************************/
 @media only screen and (max-width: 780px) and (min-width: 320px) {
+  .fa-circle-xmark {
+    display: block;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    font-size: 2rem;
+    color: var(--orange);
+    transition: 0.6s;
+    cursor: pointer;
+  }
+  .fa-circle-xmark:hover {
+    color: var(--blue);
+  }
   #filter {
     /* border: 1px solid #000; */
     background-color: rgba(0, 0, 0, 0.623);
