--- a/css/women-dresses.css
+++ b/css/women-dresses.css
@@ -169,7 +169,7 @@ nav {
   align-items: center;
   justify-content: flex-start;
 }
-.fa-circle-xmark {
+#filter .fa-circle-xmark {
   display: none;
 }
 
@@ -360,7 +360,6 @@ nav {
 #photo-change {
   /* border: 1px solid #000; */
   width: 100%;
-  padding: 5;
   height: 20%;
 
   display: flex;
@@ -693,7 +692,7 @@ ANIMATION SECTION END
     height: 100vh;
     width: 100%;
     z-index: 100;
-
+    display: none;
     align-items: center;
     justify-content: flex-start;
   }
@@ -726,5 +725,27 @@ ANIMATION SECTION END
     color: var(--white);
     cursor: pointer;
     transition: 0.5s;
+  }
+
+  .collection-div {
+    width: 100%;
+  }
+
+  /* .collection-div .card {
+    border: 1px solid var(--orange);
+    width: 480px;
+    height: 300px;
+    display: flex;
+    margin-bottom: 30px;
+    transition: 0.6s;
+  } */
+
+  #photo-change img {
+    /* border: 1px solid #000; */
+    height: 100%;
+    width: calc(100% / 4);
+    object-fit: contain;
+    cursor: pointer;
+    user-select: none;
   }
 }
