--- a/css/women-dresses.css
+++ b/css/women-dresses.css
@@ -289,9 +289,6 @@ nav {
   object-fit: cover;
   cursor: zoom-in;
   transform: translate(0%, 0%) scale(1);
-  /* position: absolute; */
-  /* top: 0; */
-  /* left: 0; */
 }
 
 .card .card-right {
@@ -322,6 +319,7 @@ nav {
 }
 
 .card .card-right h3 {
+  /* border: 1px solid #000; */
   text-align: center;
   font-weight: 500;
   color: var(--orange);
@@ -731,21 +729,62 @@ ANIMATION SECTION END
     width: 100%;
   }
 
-  /* .collection-div .card {
-    border: 1px solid var(--orange);
-    width: 480px;
-    height: 300px;
-    display: flex;
-    margin-bottom: 30px;
-    transition: 0.6s;
-  } */
-
   #photo-change img {
-    /* border: 1px solid #000; */
     height: 100%;
     width: calc(100% / 4);
     object-fit: contain;
     cursor: pointer;
     user-select: none;
+  }
+}
+
+@media only screen and (max-width: 440px) and (min-width: 320px) {
+  #photo-change {
+    display: flex;
+  }
+
+  .collection-div .card {
+    border: 1px solid var(--orange);
+    width: 480px;
+    height: 310px;
+    display: flex;
+    margin-bottom: 30px;
+    transition: 0.6s;
+  }
+
+  .card .card-right div span {
+    /* border: 1px solid #000; */
+    color: var(--gray);
+    font-size: 10px;
+  }
+
+  .card .card-left {
+    /* border: 1px solid #000; */
+    width: 60%;
+  }
+
+  .card .card-right {
+    /* border: 1px solid #000; */
+    width: 40%;
+  }
+
+  .card .card-right div {
+    height: 30px;
+    width: 100%;
+    padding: 5px 10px;
+  }
+
+  .card-right div span select {
+    padding: 5px;
+    width: 50px;
+    font-size: 10px;
+  }
+
+  #add-cart-btn {
+    height: 30px;
+  }
+
+  #add-cart-btn span {
+    font-size: 11px;
   }
 }
