--- a/css/women-dresses.css
+++ b/css/women-dresses.css
@@ -33,6 +33,9 @@
   --gray: #2a2a2a;
   --white: #ffff;
 }
+body {
+  overflow: hidden;
+}
 
 a {
   text-decoration: none;
@@ -44,7 +47,6 @@ a {
 nav {
   /* border: 1px solid #000; */
   background-color: white;
-  /* box-shadow: 0px 0px 10px 0.5px rgb(207, 207, 207); */
   width: 100%;
   height: 120px;
 
@@ -667,6 +669,9 @@ ANIMATION SECTION END
 ANIMATION SECTION END
 ***********************************************/
 @media only screen and (max-width: 780px) and (min-width: 320px) {
+  nav {
+    display: none;
+  }
   .fa-circle-xmark {
     display: block;
     position: absolute;
@@ -726,7 +731,9 @@ ANIMATION SECTION END
   }
 
   .collection-div {
+    border: 1px solid #000;
     width: 100%;
+    height: 100vh;
   }
 
   #photo-change img {
@@ -786,5 +793,9 @@ ANIMATION SECTION END
 
   #add-cart-btn span {
     font-size: 11px;
+  }
+
+  .card .card-left img {
+    object-fit: contain;
   }
 }
