--- a/css/women-dresses.css
+++ b/css/women-dresses.css
@@ -33,6 +33,7 @@
   --gray: #2a2a2a;
   --white: #ffff;
 }
+
 body {
   overflow: hidden;
 }
@@ -167,10 +168,9 @@ nav {
 }
 
 #products-section {
-  /* border: 1px solid #f00; */
+  /* border: 1px solid #000; */
   height: 100vh;
   width: 100%;
-  /* padding-top: 9%; */
 
   display: flex;
   align-items: center;
