--- a/css/women-dresses.css
+++ b/css/women-dresses.css
@@ -45,6 +45,10 @@ a {
 /***********************************************
     NAV START
 ***********************************************/
+.hamburger-container{
+  display: none;
+}
+
 nav {
   /* border: 1px solid #000; */
   background-color: white;
@@ -674,6 +678,58 @@ ANIMATION SECTION END
 ANIMATION SECTION END
 ***********************************************/
 @media only screen and (max-width: 780px) and (min-width: 320px) {
+
+  .hamburger-container {
+    /* border: 1px solid #000; */
+    background-color: rgba(0, 0, 0, 0.705);
+    position: fixed;
+    display: block;
+    left: 100%;
+    top: 0;
+    height: 100vh;
+    width: 100%;
+    z-index: 2;
+    backdrop-filter: blur(10px);
+    transition: 0.4s;
+  }
+
+  .hamburger-container i {
+    /* border: 1px solid #000; */
+    font-size: 35px;
+    position: absolute;
+    color: var(--orange);
+    right: 30px;
+    top: 25px;
+    cursor: pointer;
+    transition: 0.6s;
+  }
+
+  .hamburger-container i:hover {
+    color: var(--blue);
+  }
+
+  .hamburger-container ul {
+    /* border: 1px solid #000; */
+    list-style: none;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: column;
+  }
+
+  .hamburger-container ul li a {
+    /* border: 1px solid #000; */
+    font-size: 25px;
+    color: var(--orange);
+    font-weight: 500;
+    transition: 0.6s;
+  }
+
+  .hamburger-container ul li a:hover {
+    color: var(--blue);
+  }
   nav {
     display: none;
   }
