--- a/css/women-dresses.css
+++ b/css/women-dresses.css
@@ -11,7 +11,7 @@
 }
 
 ::-webkit-scrollbar {
-  width: 10;
+  width: 10px;
   background-color: #ff8a677e;
   border-radius: 50px;
 }
@@ -34,9 +34,9 @@
   --white: #ffff;
 }
 
-body {
+/* body {
   overflow: hidden;
-}
+} */
 
 a {
   text-decoration: none;
@@ -484,6 +484,7 @@ nav {
   font-size: 25px;
   font-weight: 400;
   color: white;
+  text-align: center;
 }
 
 .form-left-div .form {
@@ -863,7 +864,7 @@ ANIMATION SECTION END
     width: 480px;
     height: 310px;
     display: flex;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
     transition: 0.6s;
   }
 
@@ -902,5 +903,184 @@ ANIMATION SECTION END
 
   .card .card-left img {
     object-fit: contain;
+  }
+}
+@media only screen and (max-width: 780px) and (min-width: 320px) {
+  #order-form {
+    /* border: 1px solid #00ff00; */
+    width: 100%;
+    min-height: 200vh;
+    background-color: rgba(0, 0, 0, 0.705);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
+  .form-main-div {
+    /* border: 1px solid #000; */
+    width: 100%;
+    min-height: 200vh;
+    background-color: rgba(255, 255, 255, 0.089);
+    backdrop-filter: blur(50px);
+
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .form-main-div .fa-xmark {
+    /* border: 1px solid #000; */
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 1.2% 1.6%;
+    font-size: 20px;
+    color: white;
+    cursor: pointer;
+    transition: 0.6s;
+  }
+
+  .form-main-div .fa-xmark:hover {
+    background-color: red;
+  }
+
+  .form-left-div {
+    /* border: 1px solid #000; */
+    width: 600px;
+    height: 100%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .form-left-div h4 {
+    /* border: 1px solid #000; */
+    font-size: 25px;
+    font-weight: 400;
+    color: white;
+    text-align: center;
+  }
+
+  .form-left-div .form {
+    /* border: 1px solid #f00; */
+    width: 70%;
+    height: 90%;
+  }
+
+  form label {
+    color: white;
+  }
+
+  input[type="text"],
+  input[type="email"],
+  input[type="tel"],
+  textarea {
+    /* border: 1px solid #000; */
+    width: 100%;
+    font-weight: 300;
+    font-size: 15px;
+    padding: 5px 10px;
+    border: 1px solid #ccc;
+    outline: none;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: none;
+  }
+
+  .form-right-div {
+    /* border: 1px solid #000; */
+    width: 600px;
+    height: 100%;
+    padding: 10px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .form-right-div h4 {
+    /* border: 1px solid #000; */
+    font-size: 25px;
+    font-weight: 400;
+    color: white;
+  }
+
+  .form-right-div input[type="text"],
+  .form-right-div input[type="email"],
+  .form-right-div input[type="tel"],
+  .form-right-div input[type="number"] {
+    /* border: 1px solid #000; */
+    width: 100%;
+    height: 25px;
+    font-weight: 300;
+    font-size: 15px;
+    padding-left: 40px;
+    border: none;
+    border-bottom: 1px solid rgb(218, 218, 218);
+    outline: none;
+    margin: 1.6px 0px;
+    border-radius: 3px;
+    box-sizing: border-box;
+    resize: none;
+    color: var(--heading);
+  }
+
+  .form-right-div label {
+    /* border: 1px solid #000; */
+    font-size: 15px;
+  }
+
+  .form-right-div .form .button-div {
+    /* border: 1px solid #f00; */
+    width: 100%;
+    height: 60px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .form-right-div .form .button-div button {
+    width: 180px;
+    height: 40px;
+    cursor: pointer;
+    border-radius: 20px;
+  }
+
+  .form-right-div .form .button-div button:nth-child(1) {
+    border: none;
+    background-color: var(--orange);
+    color: white;
+    transition: 0.6s;
+    outline: none;
+  }
+
+  .form-right-div .form .button-div button:nth-child(1):hover {
+    background-color: var(--blue);
+  }
+
+  .form-right-div .form {
+    /* border: 1px solid #000; */
+    width: 70%;
+    height: 90%;
+  }
+
+  .popup-opening-animation {
+    animation-name: popup-opening-animation;
+    animation-duration: 0.7s;
+    animation-direction: inherit;
+    animation-iteration-count: 1;
   }
 }
