--- a/css/women-dresses.css
+++ b/css/women-dresses.css
@@ -319,7 +319,7 @@ nav {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  z-index: 99;
+  z-index: 9;
 }
 
 #zoomedDiv img {
@@ -746,9 +746,13 @@ ANIMATION SECTION END
 
   .responsive-header {
     /* border: 1px solid #000; */
+    background-color: var(--white);
     height: 10vh;
     width: 100%;
-    position: static;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
 
     display: flex;
     justify-content: center;
@@ -842,8 +846,10 @@ ANIMATION SECTION END
   }
 
   .collection-div {
+    /* border: 1px solid #000; */
+    padding-top: 100px;
     width: 100%;
-    height: 90vh;
+    height: 100%;
   }
 
   #photo-change img {
