--- a/css/women-dresses.css
+++ b/css/women-dresses.css
@@ -438,6 +438,7 @@ nav {
   position: absolute;
   top: 0;
   left: 0;
+  z-index: 11;
 }
 
 .form-main-div {
@@ -611,18 +612,17 @@ MODAL BOX SECTION START
 #modal-box {
   /* border: 1px solid #000; */
   background-color: white;
-  width: 400px;
+  width: 40%;
   height: 240px;
-  margin: 50px auto;
   position: absolute;
-  top: 25%;
-  left: 35%;
+  top: 35%;
+  left: 30%;
   z-index: 9999999;
   padding-top: 30px;
   pointer-events: all;
   box-shadow: 0px 0px 10px 1px var(--gray);
 
-  display: none;
+  display: flex;
   align-items: center;
   justify-content: flex-start;
   flex-direction: column;
@@ -641,6 +641,11 @@ MODAL BOX SECTION START
   font-size: 1.5rem;
   font-weight: 500;
   color: green;
+  text-align: center;
+}
+
+#modal-box span {
+  text-align: center;
 }
 
 #modal-box button {
@@ -689,7 +694,7 @@ ANIMATION SECTION END
     top: 0;
     height: 100vh;
     width: 100%;
-    z-index: 2;
+    z-index: 11;
     backdrop-filter: blur(10px);
     transition: 0.4s;
   }
@@ -859,6 +864,16 @@ ANIMATION SECTION END
     object-fit: contain;
     cursor: pointer;
     user-select: none;
+  }
+
+  #modal-box {
+    width: 70%;
+    height: 260px;
+    margin: 0;
+    top: 25%;
+    left: 17%;
+    padding: 10px;
+    padding-top: 30px;
   }
 }
 @media only screen and (max-width: 440px) and (min-width: 320px) {
